<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Login_Register_backgroundColor"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="15dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_gfs_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register.email.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/register.et.email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="monospace"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register.name.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/register.et.name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="monospace"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register.phone.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/register.et.phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:backgroundTint="@color/white"
                    android:fontFamily="monospace"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register.password.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/register.et.password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="monospace"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register.repassword.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/register.et.repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="monospace"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register.btn.register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>