<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/orderconfirm.toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:paddingTop="10dp"
                            android:text="YOUR ORDERS"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/orderconfirm.ll.orders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"></LinearLayout>

                        <Button
                            android:id="@+id/orderconfirm.btn.more"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:background="#ba2c2c"
                            android:paddingBottom="5dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="5dp"
                            android:text="@string/order_more"
                            android:textColor="#fff"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:background="@drawable/border_bottom_set"
                                android:gravity="center_horizontal"
                                android:paddingBottom="10dp"
                                android:paddingTop="10dp"
                                android:text="DELIVER TO"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/orderconfirm.tv.changeuseraddr"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical|right"
                                android:paddingBottom="10dp"
                                android:text="CHANGE"
                                android:textColor="@color/darkred"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_location"
                                android:tint="@color/darkred"/>

                            <TextView
                                android:id="@+id/orderconfirm.tv.useraddr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/address_here"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/border_bottom_set"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="PAYMENT DETAILS"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_shopping_cart_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Cost (Est)"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/orderconfirm.tv.total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price Here" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_motorcycle" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Delivery"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/orderconfirm.tv.deliveryfee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price Here" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:orientation="horizontal"
                            android:paddingRight="8dp">

                            <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <RadioButton
                                    android:id="@+id/orderconfirm.rb.goPay"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="GO-PAY" />

                                <RadioButton
                                    android:id="@+id/orderconfirm.rb.gopoints"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="GO-POINTS" />

                                <RadioButton
                                    android:id="@+id/orderconfirm.rb.cash"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="Cash" />
                            </RadioGroup>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:weightSum="1">

                                <TextView
                                    android:id="@+id/orderconfirm.tv.gopay"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_weight="0.33"
                                    android:gravity="center_vertical"
                                    android:text="Deposit Here" />

                                <TextView
                                    android:id="@+id/orderconfirm.tv.gopoints"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_weight="0.33"
                                    android:gravity="center_vertical"
                                    android:text="Deposit Here" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_weight="0.33"
                                    android:gravity="center_vertical" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_top_set"
                            android:orientation="horizontal"
                            android:paddingBottom="16dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="16dp">

                            <Space
                                android:layout_width="24dp"
                                android:layout_height="16dp"
                                android:layout_marginRight="8dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Total Price"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/orderconfirm.tv.grandtotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Price Here" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/orderconfirm.btn.order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkred"
                android:text="@string/order"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>